--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "pretest": "cross-env MODE=test npm run build",
     "test": "node tests/app.spec.js",
     "watch": "node scripts/watch.js",
-    "lint": "eslint . --ext js,ts,vue",
+    "lint": "eslint . --ext js,ts,tsx",
     "typecheck-main": "tsc --noEmit -p packages/main/tsconfig.json",
     "typecheck-preload": "tsc --noEmit -p packages/preload/tsconfig.json",
-    "typecheck-renderer": "vue-tsc --noEmit -p packages/renderer/tsconfig.json",
+    "typecheck-renderer": "tsc --noEmit -p packages/renderer/tsconfig.json",
     "typecheck": "npm run typecheck-main && npm run typecheck-preload && npm run typecheck-renderer"
   },
   "browserslist": [
@@ -27,28 +27,32 @@
     "pre-push": "npm run typecheck"
   },
   "lint-staged": {
-    "*.{js,ts,vue}": "eslint --cache --fix"
+    "*.{js,ts,tsx}": "eslint --cache --fix"
   },
   "devDependencies": {
     "@types/electron-devtools-installer": "2.2.0",
-    "@typescript-eslint/eslint-plugin": "4.30.0",
-    "@vitejs/plugin-vue": "1.6.0",
+    "@types/react": "^17.0.20",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "cross-env": "7.0.3",
     "electron": "13.2.3",
     "electron-builder": "22.11.7",
     "electron-devtools-installer": "3.2.0",
     "eslint": "7.32.0",
-    "eslint-plugin-vue": "7.17.0",
+    "eslint-plugin-react": "^7.25.1",
     "lint-staged": "11.1.2",
     "simple-git-hooks": "2.6.1",
     "spectron": "15.0.0",
     "typescript": "4.4.2",
-    "vite": "2.5.3",
-    "vue-tsc": "0.3.0"
+    "vite": "2.5.3"
   },
   "dependencies": {
     "electron-updater": "4.5.2",
-    "vue": "3.2.8",
-    "vue-router": "4.0.11"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0"
   }
 }
