--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,17 +2,14 @@
   "compilerOptions": {
     "module": "esnext",
     "target": "esnext",
+    "jsx": "react",
     "sourceMap": true,
     "moduleResolution": "Node",
     "skipLibCheck": true,
     "strict": true,
     "isolatedModules": true,
-    "types": [
-      "node"
-    ],
-    "typeRoots": [
-      "node_modules/@types",
-    ],
+    "types": ["node"],
+    "typeRoots": ["node_modules/@types"],
     "lib": ["ESNext"]
-  },
+  }
 }
